--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>appsus</title>
+    <!--<link rel="stylesheet" href="dist/static/css/style.css">-->
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+
 </html>
