--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>appsus</title>
-    <!--<link rel="stylesheet" href="dist/static/css/style.css">-->
+    <title>K & K appsus</title>
 
   </head>
   <body>
